k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-flomo-server
  labels:
    app: my-flomo-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-flomo-server
  template:
    metadata:
      labels:
        app: my-flomo-server
    spec:
      containers:
        - name: my-flomo-server
          image: jerryshell/my-flomo-server:latest
          ports:
            - name: http
              containerPort: 8060
