k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-flomo-server
spec:
  ports:
    - name: http
      port: 8060
      targetPort: http
  selector:
    app: my-flomo-server
